<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividad2.CalculadoraActivity">

    <Button
        android:id="@+id/btnDividir"
        android:layout_width="157dp"
        android:layout_height="41dp"
        android:onClick="dividir"
        android:text="@string/dividir"
        app:layout_constraintBottom_toTopOf="@+id/txtResultado"
        app:layout_constraintEnd_toStartOf="@+id/btnMultiplicar"
        app:layout_constraintHorizontal_bias="0.701"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSumar"
        app:layout_constraintVertical_bias="0.485" />

    <Button
        android:id="@+id/btnRestar"
        android:layout_width="157dp"
        android:layout_height="41dp"
        android:layout_marginTop="40dp"
        android:text="@string/restar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.265"
        app:layout_constraintStart_toEndOf="@+id/btnSumar"
        app:layout_constraintTop_toBottomOf="@+id/txtOperandoB" />

    <Button
        android:id="@+id/btnMultiplicar"
        android:layout_width="157dp"
        android:layout_height="41dp"
        android:layout_marginEnd="40dp"
        android:onClick="multiplicar"
        android:text="@string/multiplicar"
        app:layout_constraintBottom_toTopOf="@+id/txtResultado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRestar"
        app:layout_constraintVertical_bias="0.485" />

    <Button
        android:id="@+id/btnSumar"
        android:layout_width="157dp"
        android:layout_height="41dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/sumar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOperandoB" />

    <EditText
        android:id="@+id/txtOperandoA"
        android:layout_width="187dp"
        android:layout_height="38dp"
        android:layout_marginTop="28dp"
        android:width="100dp"
        android:height="25dp"
        android:text=""
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/textViewB"
        app:layout_constraintEnd_toEndOf="@+id/textViewA"
        app:layout_constraintStart_toStartOf="@+id/textViewA"
        app:layout_constraintTop_toBottomOf="@+id/textViewA"
        app:layout_constraintVertical_bias="0.116" />

    <EditText
        android:id="@+id/txtOperandoB"
        android:layout_width="183dp"
        android:layout_height="42dp"
        android:layout_marginTop="44dp"
        android:width="100dp"
        android:height="25dp"
        android:text=""
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/txtResultado"
        app:layout_constraintEnd_toEndOf="@+id/textViewB"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="@+id/textViewB"
        app:layout_constraintTop_toBottomOf="@+id/textViewB"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewA"
        android:layout_width="190dp"
        android:layout_height="45dp"
        android:width="100dp"
        android:height="25dp"
        android:text="@string/operandoA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/textViewB"
        android:layout_width="182dp"
        android:layout_height="41dp"
        android:layout_marginBottom="488dp"
        android:width="100dp"
        android:height="25dp"
        android:text="@string/operandoB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txtOperandoA"
        app:layout_constraintStart_toStartOf="@+id/txtOperandoA" />

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="172dp"
        android:layout_height="31dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewB"
        app:layout_constraintVertical_bias="0.712" />

    <TextView
        android:id="@+id/idResultado"
        android:layout_width="163dp"
        android:layout_height="20dp"
        android:layout_marginBottom="16dp"
        android:text="@string/resultado"
        app:layout_constraintBottom_toTopOf="@+id/txtResultado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>