<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.practica2.ActivityMenu">

    <Button
        android:id="@+id/button_ejercicio_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/titulo_item1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_ejercicio_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/titulo_item2"
        app:layout_constraintStart_toStartOf="@+id/button_ejercicio_1"
        app:layout_constraintTop_toBottomOf="@+id/button_ejercicio_1"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_ejercicio_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/titulo_item3"
        app:layout_constraintStart_toStartOf="@+id/button_ejercicio_2"
        app:layout_constraintTop_toBottomOf="@+id/button_ejercicio_2"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_ejercicio_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/titulo_item4"
        app:layout_constraintStart_toStartOf="@+id/button_ejercicio_3"
        app:layout_constraintTop_toBottomOf="@+id/button_ejercicio_3"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="EJERCICIOS TP2"
        android:textSize="30dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>